# Recipes-App

c++/: CMakeLists.txt  Functions.h  data.json  main.cpp
java/: .gitignore  data.json  login_info.json
java/src/: Main.java
python/: data.json  functions.py  main.py  temp.json
